--- a/docs/sudo_plugin_python.man.in
+++ b/docs/sudo_plugin_python.man.in
@@ -479,7 +479,8 @@ validate(self)
 .fi
 .RS 6n
 .sp
-For policy plugins that cache authentication credentials, this function is used to validate and cache the credentials (optional).
+For policy plugins that cache authentication credentials,
+this function is used to validate and cache the credentials (optional).
 .RE
 .TP 6n
 \fIinvalidate\fR
@@ -490,7 +491,8 @@ invalidate(self, remove: int)
 .fi
 .RS 6n
 .sp
-For policy plugins that cache authentication credentials, this function is used to invalidate the credentials (optional).
+For policy plugins that cache authentication credentials,
+this function is used to invalidate the credentials (optional).
 .sp
 The function arguments are as follows:
 .TP 6n
@@ -553,8 +555,8 @@ The exit status of the command if was executed, otherwise \-1.
 .TP 6n
 \fIerror\fR
 .br
-If the command could not be executed, this is set to the value of
-errno set by the
+If the command could not be executed,
+this is set to the value of errno set by the
 execve(2)
 system call, otherwise 0.
 .PD 0
@@ -853,8 +855,8 @@ The exit status of the command if was executed, otherwise \-1.
 .TP 6n
 \fIerror\fR
 .br
-If the command could not be executed, this is set to the value of
-errno set by the
+If the command could not be executed,
+this is set to the value of errno set by the
 execve(2)
 system call, otherwise 0.
 .PD 0
@@ -887,7 +889,8 @@ Plugin python_audit @python_plugin@ ModulePath=<path> ClassName=<class>
 Sudo supports loading multiple audit plugins.
 Currently only 8 python audit plugins can be loaded at once.
 .PP
-An audit plugin may have the following member functions (all of which are optional):
+An audit plugin may have the following member functions
+(all of which are optional):
 .TP 6n
 \fIconstructor\fR
 .nf
