--- a/docs/sudo_plugin_python.mdoc.in
+++ b/docs/sudo_plugin_python.mdoc.in
@@ -401,13 +401,15 @@ the plugin should list the privileges of the invoking user.
 validate(self)
 .Ed
 .Pp
-For policy plugins that cache authentication credentials, this function is used to validate and cache the credentials (optional).
+For policy plugins that cache authentication credentials,
+this function is used to validate and cache the credentials (optional).
 .It Fa invalidate
 .Bd -literal -compact
 invalidate(self, remove: int)
 .Ed
 .Pp
-For policy plugins that cache authentication credentials, this function is used to invalidate the credentials (optional).
+For policy plugins that cache authentication credentials,
+this function is used to invalidate the credentials (optional).
 .Pp
 The function arguments are as follows:
 .Bl -tag -width 4n
@@ -453,8 +455,8 @@ The function arguments are as follows:
 .It Fa exit_status
 The exit status of the command if was executed, otherwise \-1.
 .It Fa error
-If the command could not be executed, this is set to the value of
-errno set by the
+If the command could not be executed,
+this is set to the value of errno set by the
 .Xr execve 2
 system call, otherwise 0.
 .El
@@ -695,8 +697,8 @@ The function arguments are as follows:
 .It Fa exit_status
 The exit status of the command if was executed, otherwise \-1.
 .It Fa error
-If the command could not be executed, this is set to the value of
-errno set by the
+If the command could not be executed,
+this is set to the value of errno set by the
 .Xr execve 2
 system call, otherwise 0.
 .El
@@ -721,7 +723,8 @@ Plugin python_audit @python_plugin@ ModulePath=<path> ClassName=<class>
 Sudo supports loading multiple audit plugins.
 Currently only 8 python audit plugins can be loaded at once.
 .Pp
-An audit plugin may have the following member functions (all of which are optional):
+An audit plugin may have the following member functions
+(all of which are optional):
 .Bl -tag -width 4n
 .It Fa constructor
 .Bd -literal -compact
