--- a/docs/sudo_plugin_python.man.in
+++ b/docs/sudo_plugin_python.man.in
@@ -3,7 +3,7 @@
 .\" SPDX-License-Identifier: ISC
 .\"
 .\" Copyright (c) 2019-2021 Robert Manner <robert.manner@oneidentity.com>
-.\" Copyright (c) 2019-2023 Todd C. Miller <Todd.Miller@sudo.ws>
+.\" Copyright (c) 2019-2025 Todd C. Miller <Todd.Miller@sudo.ws>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -17,7 +17,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.TH "SUDO_PLUGIN_PYTHON" "5" "January 16, 2023" "Sudo @PACKAGE_VERSION@" "File Formats Manual"
+.TH "SUDO_PLUGIN_PYTHON" "5" "February 26, 2025" "Sudo @PACKAGE_VERSION@" "File Formats Manual"
 .nh
 .if n .ad l
 .SH "NAME"
@@ -1735,21 +1735,21 @@ l l l.
 .PP
 \fBsudo.conf name\fR	\fBPython constant\fR	\fBdescription\fR
 .PP
-crit	\fRsudo.DEBUG.CRIT\fR	only critical messages
+crit	\fRsudo.DEBUG.CRIT\fR	critical errors
 .PP
-err	\fRsudo.DEBUG.ERROR\fR	
+err	\fRsudo.DEBUG.ERROR\fR	non-critical errors
 .PP
-warn	\fRsudo.DEBUG.WARN\fR	
+warn	\fRsudo.DEBUG.WARN\fR	non-fatal warnings
 .PP
-notice	\fRsudo.DEBUG.NOTICE\fR	
+notice	\fRsudo.DEBUG.NOTICE\fR	non-error condition notices
 .PP
-diag	\fRsudo.DEBUG.DIAG\fR	
+diag	\fRsudo.DEBUG.DIAG\fR	diagnostic messages
 .PP
-info	\fRsudo.DEBUG.INFO\fR	
+info	\fRsudo.DEBUG.INFO\fR	informational message
 .PP
-trace	\fRsudo.DEBUG.TRACE\fR	
+trace	\fRsudo.DEBUG.TRACE\fR	log function enter/exit
 .PP
-debug	\fRsudo.DEBUG.DEBUG\fR	very extreme verbose debugging
+debug	\fRsudo.DEBUG.DEBUG\fR	very verbose debugging
 .TE
 .PP
 \fIUsing the logging module\fR
