--- a/scripts/check_man.in
+++ b/scripts/check_man.in
@@ -11,8 +11,53 @@ if [ "$MANTYPE" != "mdoc" ]; then
 fi
 
 TFILE=`mktemp -t check_man.XXXXXX` || exit 1
+OFILE=`mktemp -t check_man.XXXXXX` || exit 1
 
 rval=0
+
+# Perform checks across all files first
+$EGREP -n '([^0-9][0-9]-[1-9]|[^A-Z][A-Z]-[A-Z]|[^a-z][a-z]-[a-z])' "$@" > "$TFILE" 2>&1
+if [ $? -eq 0 ]; then
+    rval=`expr $rval + 1`
+    echo "" >> "$OFILE"
+    echo "Change '-' to '\(en' (en-dash) for alpha or numberic range:" >> "$OFILE"
+    cat "$TFILE" >> "$OFILE"
+fi
+
+$EGREP -n '--' "$@" > "$TFILE" 2>&1
+if [ $? -eq 0 ]; then
+    rval=`expr $rval + 1`
+    echo "" >> "$OFILE"
+    echo "Change '--' to '\(em' (em-dash) or escape the '-':" >> "$OFILE"
+    cat "$TFILE" >> "$OFILE"
+fi
+
+$EGREP -n '-[^-\\]' "$@" > "$TFILE" 2>&1
+if [ $? -eq 0 ]; then
+    rval=`expr $rval + 1`
+    echo "" >> "$OFILE"
+    echo "Escape '-' as '\-':" >> "$OFILE"
+    cat "$TFILE" >> "$OFILE"
+fi
+
+# Change a HYPHEN-MINUS (code 0x2D) to a minus(-dash) (\-),
+
+$EGREP -n '^\.It[ 	].*[ 	]Ta$' "$@" > "$TFILE" 2>&1
+if [ $? -eq 0 ]; then
+    rval=`expr $rval + 1`
+    echo "" >> "$OFILE"
+    echo "Empty table cell at EOL leads to trailing whitespace:" >> "$OFILE"
+    cat "$TFILE" >> "$OFILE"
+fi
+
+$EGREP -n '[ 	]$' "$@" > "$TFILE" 2>&1
+if [ $? -eq 0 ]; then
+    rval=`expr $rval + 1`
+    echo "" >> "$OFILE"
+    echo "Trailing whitespace:" >> "$OFILE"
+    cat "$TFILE" >> "$OFILE"
+fi
+
 while [ $# != 0 ]; do
     if [ "$MANDOC" != "mandoc" ]; then
 	# Ignore OS warning and missing cross-references
@@ -28,22 +73,12 @@ while [ $# != 0 ]; do
 	    rval=`expr $rval + $?`
     fi
 
-    $EGREP '^\.It[ 	].*[ 	]Ta$' $1 > "$TFILE" 2>&1
-    if [ -s "$TFILE" ]; then
-	rval=`expr $rval + 1`
-	echo "Empty table cell at EOL leads to trailing whitespace:"
-	cat "$TFILE"
-    fi
-
-    $EGREP '[ 	]$' $1 > "$TFILE" 2>&1
-    if [ -s "$TFILE" ]; then
-	rval=`expr $rval + 1`
-	echo "Trailing whitespace:"
-	cat "$TFILE"
-    fi
-
     shift
 done
 
-rm -f "$TFILE"
+if [ -s "$OFILE"  ]; then
+    cat "$OFILE"
+fi
+
+rm -f "$OFILE" "$TFILE"
 exit $rval
