--- a/docs/sudoers.man.in
+++ b/docs/sudoers.man.in
@@ -934,7 +934,7 @@ Group in the same domain: "%:Group Name"
 Group in any domain: "%:Group Name@FULLY.QUALIFIED.DOMAIN"
 .TP 3n
 \fB\(bu\fR
-Group SID: "%:S-1-2-34-5678901234-5678901234-5678901234-567"
+Group SID: "%:S\-1\-2\-34\-5678901234\-5678901234\-5678901234\-567"
 .PP
 See
 \fIGROUP PROVIDER PLUGINS\fR
