Make ignore_dot the default
Add --disable-ignore-dot to disable it and deprecate --with-ignore-dot.

--- a/configure.ac
+++ b/configure.ac
@@ -205,7 +205,7 @@ logfac=auth
 goodpri=notice
 badpri=alert
 loglen=80
-ignore_dot=off
+ignore_dot=on
 mail_no_user=on
 mail_no_host=off
 mail_no_perms=off
@@ -444,9 +444,7 @@ AC_ARG_WITH(csops, [AS_HELP_STRING([--with-csops], [add CSOps standard options])
 [case $with_csops in
     yes)	AC_MSG_NOTICE([adding CSOps standard options])
 		CHECKSIA=false
-		with_ignore_dot=yes
 		insults=on
-		with_env_editor=yes
 		: ${mansectsu='8'}
 		: ${mansectform='5'}
 		: ${mansectmisc='7'}
@@ -665,16 +663,7 @@ AC_ARG_WITH(loglen, [AS_HELP_STRING([--with-loglen], [maximum length of a log fi
 esac])
 AC_DEFINE_UNQUOTED(MAXLOGFILELEN, $loglen, [The max number of chars per log file line (for line wrapping).])
 
-AC_ARG_WITH(ignore-dot, [AS_HELP_STRING([--with-ignore-dot], [ignore '.' in the PATH])],
-[case $with_ignore_dot in
-    yes)	ignore_dot=on
-		AC_DEFINE(IGNORE_DOT_PATH)
-		;;
-    no)		ignore_dot=off
-		;;
-    *)		AC_MSG_ERROR([--with-ignore-dot does not take an argument.])
-		;;
-esac])
+AC_ARG_WITH(ignore-dot, [AS_HELP_STRING([--with-ignore-dot], [deprecated, use --disable-ignore-dot])], [enable_ignore_dot="$with_ignore_dot"])
 
 AC_ARG_WITH(mail-if-no-user, [AS_HELP_STRING([--without-mail-if-no-user], [do not send mail if user not in sudoers])],
 [case $with_mail_if_no_user in
@@ -1279,6 +1268,19 @@ AC_ARG_ENABLE(env_debug,
   esac
 ])
 
+AC_ARG_ENABLE(ignore-dot,
+[AS_HELP_STRING([--disable-ignore-dot], [allow '.' and "" in the PATH])],
+[ case "$enableval" in
+    yes)	ignore_dot=on
+		;;
+    no)		ignore_dot=off
+		AC_DEFINE(ALLOW_DOT_PATH)
+		;;
+    *)		AC_MSG_WARN([ignoring unknown argument to --enable-ignore-dot: $enableval])
+		;;
+  esac
+])
+
 AC_ARG_ENABLE(postinstall,
 [AS_HELP_STRING([--enable-postinstall], [Script to run after the install phase])],
 [ case "$enableval" in
@@ -1384,7 +1386,7 @@ AC_ARG_ENABLE(leaks,
     yes)    ;;
     no)	    AC_DEFINE(NO_LEAKS)
 	    ;;
-    *)	    AC_MSG_WARN([ignoring unknown argument to --disable-leaks: $enableval])
+    *)	    AC_MSG_WARN([ignoring unknown argument to --enable-leaks: $enableval])
 	    ;;
   esac
 ])
@@ -4759,7 +4761,7 @@ AH_TEMPLATE(HAVE_ST_MTIMESPEC, [Define to 1 if your struct stat has an st_mtimes
 AH_TEMPLATE(HAVE_ST_NMTIME, [Define to 1 if your struct stat has an st_nmtime member.])
 AH_TEMPLATE(HAVE___PROGNAME, [Define to 1 if your crt0.o defines the __progname symbol for you.])
 AH_TEMPLATE(HOST_IN_LOG, [Define to 1 if you want the hostname to be entered into the log file.])
-AH_TEMPLATE(IGNORE_DOT_PATH, [Define to 1 if you want to ignore '.' and empty PATH elements.])
+AH_TEMPLATE(ALLOW_DOT_PATH, [Define to 1 if you want sudo to honor '.' and "" in the PATH.])
 AH_TEMPLATE(LOGGING, [Define to SLOG_SYSLOG, SLOG_FILE, or SLOG_BOTH.])
 AH_TEMPLATE(LONG_OTP_PROMPT, [Define to 1 if you want a two line OTP (S/Key or OPIE) prompt.])
 AH_TEMPLATE(NO_AUTHENTICATION, [Define to 1 if you don't want sudo to prompt for a password by default.])
