--- a/docs/sudoers.ldap.mdoc.in
+++ b/docs/sudoers.ldap.mdoc.in
@@ -163,7 +163,7 @@ option (or as
 It may take command line arguments just as a normal command does.
 Unlike other commands,
 .Dq sudoedit
-is a built into
+is built into
 .Nm sudo
 itself and must be specified in without a leading path.
 .Pp
@@ -400,7 +400,7 @@ The query will match
 .Em nisNetgroupTriple
 entries with either the short or long form of the host name or
 no host name specified in the tuple.
-If the NIS domain is set, the query will match only match entries
+If the NIS domain is set, the query will only match entries
 that include the domain or for which there is no domain present.
 If the NIS domain is
 .Em not
