Fix typo and update Protocol Buffers URL in sudo_logsrv.proto man page
- Remove duplicate "The" in description of log_id field.
- Update outdated Protocol Buffers link from https://developers.google.com/protocol-buffers/ to https://protobuf.dev, the new canonical URL.

Signed-off-by: peppapig450 <peppapig450@pm.me>

--- a/docs/sudo_logsrv.proto.mdoc.in
+++ b/docs/sudo_logsrv.proto.mdoc.in
@@ -268,7 +268,7 @@ was previously interrupted.
 It contains the following members:
 .Bl -tag -width Ds
 .It log_id
-The the server-side name for an I/O log that was previously
+The server-side name for an I/O log that was previously
 sent to the client by the server.
 This may be a path name on the server or some other kind of server-side
 identifier.
@@ -793,7 +793,7 @@ message ServerHello {
 .Xr sudo_logsrvd @mansectsu@
 .Rs
 .%T Protocol Buffers
-.%U https://developers.google.com/protocol-buffers/
+.%U https://protobuf.dev/
 .Re
 .Sh AUTHORS
 Many people have worked on
