Sync "Path intercept" comment with default sudo.conf and man page

--- a/docs/sudo.conf.mdoc.in
+++ b/docs/sudo.conf.mdoc.in
@@ -734,11 +734,11 @@ front-end configuration
 # Sudo command interception:
 #   Path intercept /path/to/sudo_intercept.so
 #
-# Path to a shared library containing replacements for the execv()
-# and execve() library functions, which perform a policy check to verify
-# whether the command is allowed and return an error if it is not.  This is
-# used to implement the "intercept" functionality on systems that
-# support LD_PRELOAD or its equivalent.
+# Path to a shared library containing replacements for the execv(),
+# execve() and fexecve() library functions, which perform a policy
+# check to verify whether the command is allowed and simply return
+# an error if it is not.  This is used to implement the "intercept"
+# functionality on systems that support LD_PRELOAD or its equivalent.
 #
 # The compiled-in value is usually sufficient and should only be changed
 # if you rename or move the sudo_intercept.so file.
