--- a/docs/sudo.man.in
+++ b/docs/sudo.man.in
@@ -2,7 +2,7 @@
 .\"
 .\" SPDX-License-Identifier: ISC
 .\"
-.\" Copyright (c) 1994-1996, 1998-2005, 2007-2024
+.\" Copyright (c) 1994-1996, 1998-2005, 2007-2025
 .\"	Todd C. Miller <Todd.Miller@sudo.ws>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -25,7 +25,7 @@
 .nr BA @BAMAN@
 .nr LC @LCMAN@
 .nr PS @PSMAN@
-.TH "SUDO" "@mansectsu@" "December 20, 2024" "Sudo @PACKAGE_VERSION@" "System Manager's Manual"
+.TH "SUDO" "@mansectsu@" "June 7, 2025" "Sudo @PACKAGE_VERSION@" "System Manager's Manual"
 .nh
 .if n .ad l
 .SH "NAME"
@@ -1435,6 +1435,9 @@ option was specified.
 If set,
 \fRPS1\fR
 will be set to its value for the program being run.
+.TP 17n
+\fRSUDO_TTY\fR
+Set to the terminal device of the user who invoked sudo, if one is present.
 .TP 17n
 \fRSUDO_UID\fR
 Set to the user-ID of the user who invoked sudo.
