Fix check for which man page type to use with nroff
Fixes a bug where configure would use *.man instead of *.mdoc on
systems without mandoc.

--- a/configure.ac
+++ b/configure.ac
@@ -1742,7 +1742,7 @@ AC_CACHE_CHECK([which macro set to use for manual pages],
     [sudo_cv_var_mantype],
     [
 	case "$ac_cv_path_NROFFPROG" in
-	*mandoc|nroff)
+	*mandoc|*nroff)
 	    # Prefer mdoc format for mandoc (or when no formatter is present).
 	    sudo_cv_var_mantype="mdoc"
 	    ;;
