--- a/config.h.in
+++ b/config.h.in
@@ -1114,10 +1114,10 @@
 /* Define to 1 if you have the '_ttyname_dev' function. */
 #undef HAVE__TTYNAME_DEV
 
-/* Define to 1 if you have the '__builtin_clz' built-in function */
+/* Define to 1 if the system has the `__builtin_clz' built-in function */
 #undef HAVE___BUILTIN_CLZ
 
-/* Define to 1 if you have the '__builtin_clzl' built-in function */
+/* Define to 1 if the system has the `__builtin_clzl' built-in function */
 #undef HAVE___BUILTIN_CLZL
 
 /* Define to 1 if the compiler supports the C99 __func__ variable. */
